--- a/POS/POS.Web/Views/Shared/_ItemListPartial.cshtml
+++ b/POS/POS.Web/Views/Shared/_ItemListPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IList<StockItemViewModel>
 
-<div class="mb-3">
+<div class="col-side">
     <label for="STOCKITEM_ID" class="form-label">Stock Item</label>
     <select class="form-select" name="STOCKITEM_ID" id="stkItemId" required>
         <option selected value="x">[select one]</option>
