--- a/POS/POS.Web/Views/StockGroup/List.cshtml
+++ b/POS/POS.Web/Views/StockGroup/List.cshtml
@@ -1,9 +1,7 @@
 ﻿@model IList<StockGroupViewModel>
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
-
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<link href="~/css/common.css" rel="stylesheet" />
 
 <h3>Stock Group List</h3>
 
@@ -21,22 +19,22 @@ else if (TempData["Msg"] != null && Convert.ToBoolean(TempData["IsError"]))
 }
 
 <div class="table-responsive">
-<table class="table table-bordered" id="StockGroupTable">
+    <table class="table table-bordered" id="StockGroupTable">
     <thead>
         <tr>            
-            <th scope="col">
+            <th>
                 <a href="/StockGroup/entry" class="btn add">
                         <i class="fa fa-plus"></i>
                 </a>
             </th>
-            <th scope="col">Actions</th>                       
-            <th scope="col">Code</th>
-            <th scope="col">Description</th>
-            <th scope="col">Remarks</th>
-            <th scope="col">Created At</th>
-            <th scope="col">Created By</th>
-            <th scope="col">Updated At</th>
-            <th scope="col">Updated By</th>
+            <th>Actions</th>                       
+            <th>Code</th>
+            <th>Description</th>
+            <th>Remarks</th>
+            <th>Created At</th>
+            <th>Created By</th>
+            <th>Updated At</th>
+            <th>Updated By</th>
             
         </tr>
     </thead>
@@ -44,12 +42,12 @@ else if (TempData["Msg"] != null && Convert.ToBoolean(TempData["IsError"]))
         @foreach (var item in Model)
         {
             <tr>
-                <th scope="row">@(Model.IndexOf(item) + 1)</th>
+                <td>@(Model.IndexOf(item) + 1)</td>
                 <td>
                     <a href="/StockGroup/edit?Id=@item.Id" class="btn update">
                         <i class="fa fa-pen-to-square"></i>
                     </a>
-
+                    ||
                     <a href="/StockItem/delete?Id=@item.Id" class="btn delete" onclick="return confirm('Are you sure to delete this record?')">
                         <i class="fa fa-trash"></i>
                     </a>
