--- a/POS/POS.Web/Views/Supplier/Entry.cshtml
+++ b/POS/POS.Web/Views/Supplier/Entry.cshtml
@@ -4,28 +4,39 @@
 <h3>Supplier Entry Form</h3>
 
 <form action="/supplier/entry" method="post">
-    <div class="mb-3">
-        <label for="Name" class="form-label">Name</label>
-        <input type="text" class="form-control" name="Name" id="txtName" placeholder="enter Name here" required />
-    </div>
-    <div class="mb-3">
-        <label for="Email" class="form-label">Email</label>
-        <input type="text" class="form-control" name="Email" id="txtEmail" placeholder="enter Email here" />
-    </div>
-    <div class="mb-3">
-        <label for="Phone" class="form-label">Phone</label>
-        <input type="text" class="form-control" name="Phone" id="txtPhone" placeholder="enter Phone here" />
-    </div>
-    <div class="mb-3">
-        <label for="Address" class="form-label">Address</label>
-        <textarea class="form-control" name="Address" id="txtAddress" placeholder="enter Address here"></textarea>
-    </div>
-    <div class="mb-3">
-        <label for="Remarks" class="form-label">Remarks</label>
-        <textarea class="form-control" name="Remarks" id="txtRemarks" placeholder="enter Remarks here"></textarea>
+    <div class="row-side">
+        <div class="col-side">
+            <label for="Name" class="form-label">Name</label>
+            <input type="text" class="form-control" name="Name" id="txtName" placeholder="enter Name here" required />
+        </div>
     </div>
 
-    <button type="submit" class="btn btn-primary" id="btnEntry">Entry</button>
+    <div class="row-side">
+        <div class="col-side">
+            <label for="Email" class="form-label">Email</label>
+            <input type="text" class="form-control" name="Email" id="txtEmail" placeholder="enter Email here" />
+        </div>
+        <div class="col-side">
+            <label for="Phone" class="form-label">Phone</label>
+            <input type="text" class="form-control" name="Phone" id="txtPhone" placeholder="enter Phone here" />
+        </div>
+    </div>
+
+    <div class="row-bottom">
+        <div class="col-side">
+            <label for="Address" class="form-label">Address</label>
+            <textarea class="form-control" name="Address" id="txtAddress" placeholder="enter Address here"></textarea>
+        </div>
+    </div>
+
+    <div class="row-bottom">
+        <div class="col-side">
+            <label for="Remarks" class="form-label">Remarks</label>
+            <textarea class="form-control" name="Remarks" id="txtRemarks" placeholder="enter Remarks here"></textarea>
+        </div>
+    </div>
+
+    <button type="submit" class="btn btn-add" id="btnEntry">Entry</button>
     <a href="List" class="btn btn-secondary">Cancel</a>
 </form>
 
