--- a/POS/POS.Web/Views/Cashier/Edit.cshtml
+++ b/POS/POS.Web/Views/Cashier/Edit.cshtml
@@ -5,41 +5,50 @@
 
 <form action="/Cashier/update" method="post">
     <input type="hidden" name="Id" value="@Model.Id" />
-    <div class="mb-3">
-        <label for="Name" class="form-label">Name</label>
-        <input type="text" class="form-control" name="Name" id="txtName" value="@Model.Name"/>
-    </div>
 
-    <div class="mb-3">
-        <label for="Gender" class="form-label">Gender</label>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="Gender" id="GenderF" value="F" @(Model.Gender == "F" ? "checked" : "null")>
-            <label class="form-check-label" for="GenderF">Female</label>
-        </div>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="Gender" id="GenderM" value="M" @(Model.Gender == "M" ? "checked" : "null")>
-            <label class="form-check-label" for="GenderM">Male</label>
+    <div class="row-side">
+        <div class="col-side">
+            <label for="Name" class="form-label">Name</label>
+            <input type="text" class="form-control" name="Name" id="txtName" value="@Model.Name"/>
         </div>
     </div>
 
-    <div class="mb-3">
-        <label for="Email" class="form-label">Email</label>
-        <input type="text" class="form-control" name="Email" id="txtEmail" value="@Model.Email" placeholder="enter Email here" />
+    <div class="row-side">
+        <div class="col-side">
+            <label for="Gender" class="form-label">Gender</label>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="Gender" id="GenderF" value="F" @(Model.Gender == "F" ? "checked" : "null")>
+                <label class="form-check-label" for="GenderF">Female</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="Gender" id="GenderM" value="M" @(Model.Gender == "M" ? "checked" : "null")>
+                <label class="form-check-label" for="GenderM">Male</label>
+            </div>
+        </div>
     </div>
-    <div class="mb-3">
-        <label for="Phone" class="form-label">Phone</label>
-        <input type="text" class="form-control" name="Phone" id="txtPhone" value="@Model.Phone" placeholder="enter Phone here" />
+    <div class="row-side">
+        <div class="col-side">
+            <label for="Email" class="form-label">Email</label>
+            <input type="text" class="form-control" name="Email" id="txtEmail" value="@Model.Email" placeholder="enter Email here" />
+        </div>    
+        <div class="col-side">
+            <label for="Phone" class="form-label">Phone</label>
+            <input type="text" class="form-control" name="Phone" id="txtPhone" value="@Model.Phone" placeholder="enter Phone here" />
+        </div>
     </div>
-    <div class="mb-3">
-        <label for="Address" class="form-label">Address</label>
-        <textarea class="form-control" name="Address" id="txtAddress" placeholder="enter Address here">@Model.Address</textarea>
+    <div class="row-bottom">
+        <div class="col-side">
+            <label for="Address" class="form-label">Address</label>
+            <textarea class="form-control" name="Address" id="txtAddress" placeholder="enter Address here">@Model.Address</textarea>
+        </div>
     </div>
-    <div class="mb-3">
-        <label for="Remarks" class="form-label">Remarks</label>
-        <textarea class="form-control" name="Remarks" id="txtRemarks" placeholder="enter Remarks here">@Model.Remarks</textarea>
+    <div class="row-bottom">
+        <div class="col-side">
+            <label for="Remarks" class="form-label">Remarks</label>
+            <textarea class="form-control" name="Remarks" id="txtRemarks" placeholder="enter Remarks here">@Model.Remarks</textarea>
+        </div>
     </div>
-
-    <button type="submit" class="btn btn-primary" id="btnEdit">Update</button>
+    <button type="submit" class="btn btn-update" id="btnEdit">Update</button>
     <a href="List" class="btn btn-secondary">Cancel</a>
 </form>
 <script>
