--- a/POS/POS.Web/Views/Shared/_GroupListPartial.cshtml
+++ b/POS/POS.Web/Views/Shared/_GroupListPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IList<StockGroupViewModel>
 
-<div class="mb-3">
+<div class="col-side">
     <label for="STOCKGRP_ID" class="form-label">Stock Group</label>
     <select class="form-select" name="STOCKGRP_ID" id="stkgrpId" required>
         <option selected value="x">[select one]</option>
