--- a/POS/POS.Web/Views/Shared/_Layout.cshtml
+++ b/POS/POS.Web/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/POS.Web.styles.css" asp-append-version="true" />
+    <link href="~/css/common.css" rel="stylesheet" />
 
     <!--using datatable.net  from CDN -->
     <link rel="stylesheet" href="https://cdn.datatables.net/2.3.0/css/dataTables.dataTables.css" />
@@ -56,14 +57,6 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
-                               style="color:black;">Member</a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/member/List" style="color:black;">List</a></li>
-                                <li><a class="dropdown-item" href="/member/Entry" style="color:black;">Entry</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
                                style="color:black;">Cashier</a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="/Cashier/List" style="color:black;">List</a></li>
@@ -76,6 +69,30 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="/stockincome/List" style="color:black;">List</a></li>
                                 <li><a class="dropdown-item" href="/stockincome/Entry" style="color:black;">Entry</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+                               style="color:black;">Member</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="/member/List" style="color:black;">List</a></li>
+                                <li><a class="dropdown-item" href="/member/Entry" style="color:black;">Entry</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+                               style="color:black;">Member Discount</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="/MemberDiscount/List" style="color:black;">List</a></li>
+                                <li><a class="dropdown-item" href="/MemberDiscount/Entry" style="color:black;">Entry</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+                               style="color:black;">Sale Order</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="/SaleOrder/List" style="color:black;">List</a></li>
+                                <li><a class="dropdown-item" href="/SaleOrder/Entry_Order" style="color:black;">Entry</a></li>
                             </ul>
                         </li>
 
