--- a/POS/POS.Web/Views/StockGroup/Entry.cshtml
+++ b/POS/POS.Web/Views/StockGroup/Entry.cshtml
@@ -11,10 +11,10 @@
         <input type="text" class="form-control" name="Description" id="txtDesc" placeholder="enter Description here.">
     </div>
     <div class="mb-3">
-        <label for="Remarks">Remarks</label>
+        <label for="Remarks" class="form-label">Remarks</label>
         <textarea class="form-control" placeholder="enter Remarks here" name="Remarks" id="txtRemarks"></textarea>
     </div>
-    <button type="submit" class="btn btn-primary" id="btnEntry">Entry</button>
+    <button type="submit" class="btn btn-add" id="btnEntry">Entry</button>
     <a href="List" class="btn btn-secondary">Cancel</a>
 </form>
 
@@ -33,5 +33,4 @@
             toggleEntryButton();
         });
     });
-
 </script>
