--- a/POS/POS.Web/Views/StockIncome/Entry.cshtml
+++ b/POS/POS.Web/Views/StockIncome/Entry.cshtml
@@ -2,90 +2,77 @@
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<link href="~/css/stockincome.css" rel="stylesheet" />
+<script src="~/js/common.js"></script>
 
 <h3>Stock Income Entry Form</h3>
 
-<div class="mb-3">
-    <input type="hidden" name="Id" id="txtId" value="" />        
-    <input type="hidden" name="LINE_ID" id="txtLINE_ID" value="" />
-</div>    
+<input type="hidden" name="Id" id="txtId" value="" />        
+<input type="hidden" name="LINE_ID" id="txtLINE_ID" value="" />
 
-<div class="mb-3">
-    <label for="SUPPLIER_ID" class="form-label">Supplier</label>
-    <select class="form-select" name="SUPPLIER_ID" id="supplierId" required>
-        <option selected value="x">[select one]</option>
-        @foreach (var supr in Model.SupplierVM)
-        {
-            <option value="@supr.Id">@supr.Name</option>
-        }
-    </select>
-</div>
-@* 
-<div class="mb-3">
-    <label for="STOCKGRP_ID" class="form-label">Stock Group</label>
-    <select class="form-select" name="STOCKGRP_ID" id="stkgrpId" required>
-        <option selected value="x">[select one]</option>
-        @foreach (var stkgrp in Model.StkGrpVM)
-        {
-            <option value="@stkgrp.Id">@stkgrp.Code</option>
-        }
-    </select>
-</div>
- *@
-<div class="mb-3" id="GroupList">
-    @await Html.PartialAsync("_GroupListPartial", Model.StkGrpVM)
+<div class="row-side">
+    <div class="col-side">
+        <label for="SUPPLIER_ID" class="form-label">Supplier</label>
+        <select class="form-select" name="SUPPLIER_ID" id="supplierId">
+            <option selected value="x">[select one]</option>
+            @foreach (var supr in Model.SupplierVM)
+            {
+                <option value="@supr.Id">@supr.Name</option>
+            }
+        </select>
+    </div>
 </div>
 
-<div class="mb-3" id="ItemList">
-    @await Html.PartialAsync("_ItemListPartial", Model.StkItemVM)
+<div id="configGrp" data-api-url="@Url.Action("FilterByStkGrp", "_Share")"></div>
+<div id="configItem" data-api-url="@Url.Action("FilterByStkItem", "_Share")"></div>
+
+<div class="row-side">    
+    <div class="col-side" id="GroupList">
+        @await Html.PartialAsync("_GroupListPartial", Model.StkGrpVM)
+    </div>
+    
+    <div class="col-side" id="ItemList">
+        @await Html.PartialAsync("_ItemListPartial", Model.StkItemVM)
+    </div>
 </div>
 
-@* <div class="mb-3">
-    <label for="STOCKITEM_ID" class="form-label">Stock Item</label>
-    <select class="form-select" name="STOCKITEM_ID" id="stkItemId" required>
-        <option selected value="x">[select one]</option>
-        @foreach (var stkItem in Model.StkItemVM)
-        {
-            <option value="@stkItem.Id">@stkItem.Code</option>
-        }
-    </select>
-</div> *@
-
-<div class="mb-3">
-    <label for="PRICE" class="form-label">Price</label>
-    <input type="number" class="form-control" name="PRICE" id="txtPrice" value="0" required>
-</div>
+<div class="row-side">
+    <div class="col-side">
+        <label for="PRICE" class="form-label">Price</label>
+        <input type="number" class="form-control" name="PRICE" id="txtPrice" value="0">
+    </div>
         
-<div class="mb-3">
-    <label for="QUANTITY" class="form-label">Quantity</label>
-    <input type="number" class="form-control" name="QUANTITY" id="txtQnty" value="0" required>
+    <div class="col-side">
+        <label for="QUANTITY" class="form-label">Quantity</label>
+        <input type="number" class="form-control" name="QUANTITY" id="txtQnty" value="0">
+    </div>
+</div>
+
+<div class="row-bottom">
+    <div class="col-side">
+        <label for="Remarks" class="form-label">Remarks</label>
+        <textarea class="form-control" name="Remarks" id="txtRemarks" placeholder="enter Remarks here"></textarea>
+    </div>
 </div>
 
 <div class="mb-3">
-    <label for="Remarks" class="form-label">Remarks</label>
-    <textarea class="form-control" name="Remarks" id="txtRemarks" placeholder="enter Remarks here"></textarea>
-</div>
-
-<div class="mb-3">        
-    <button id="btnAddItem" class="btn btn-primary">Add Item</button>
+    <button id="btnAddItem" class="btn btn-add">Add Item</button>
     <button id="btnDelete" class="btn btn-danger" disabled>Delete</button>
     <a href="/stockincome/List" class="btn btn-secondary">Cancel</a>
 
-    <button id="btnUpdateItem" class="btn btn-primary" style="display: none;">Update Item</button>
+    <button id="btnUpdateItem" class="btn btn-update" style="display: none;">Update Item</button>
     <button id="btnCancel" class="btn btn-danger" style="display: none;">Cancel</button>
 </div>
 
 <table id="DetailTable">
     <thead>
         <tr>
+            <th scope="col">Action</th>
             <th scope="col">Supplier</th>
             <th scope="col">Stock Group</th>
             <th scope="col">Stock Item</th>            
             <th scope="col">Price</th>
             <th scope="col">Quantity</th>
-            <th scope="col">Remarks</th>
-            <th scope="col">Action</th>            
+            <th scope="col">Remarks</th>                      
             <th scope="col" style="display: none;">Line Id</th>
         </tr>
     </thead>
@@ -93,45 +80,6 @@
 </table>
 
 <script>
-    function ItemPartialLoad(selectedstkGrp,stkItm){
-        $.ajax({
-            url: '@Url.Action("FilterByStkGrp", "_Share")',
-            type: 'GET',
-            data: { stkGrp: selectedstkGrp },
-            success: function (result) {
-                $('#ItemList').html(result);
-                if (stkItm !== null && stkItm !== "") $("#stkItemId").val(stkItm);
-            },
-            error: function () {
-                alert("Failed to load Stock Item.");
-            }
-        });
-    };
-
-    $(document).on('change', '#stkgrpId', function () {
-        var selectedstkGrp = $(this).val();
-        ItemPartialLoad(selectedstkGrp,"");
-    });
-
-    $(document).on('change', '#stkItemId', function () {
-        var selecteditem = $(this).val();
-
-        if (selecteditem != "x")
-        {
-            $.ajax({
-            url: '@Url.Action("FilterByStkItem", "_Share")',
-            type: 'GET',
-            data: { stkItem: selecteditem },
-            success: function (result) {
-                $("#stkgrpId").val(result);
-            },
-            error: function () {
-                alert("Failed to load Stock Group.");
-            }
-            });
-        }
-    });
-
     //to select table row
     $(document).ready(function () {
         $("#DetailTable").on("click", "tr", function () {
@@ -148,17 +96,17 @@
             $(this).addClass("selected"); // Highlight the clicked row
 
             // Get cell data
-            var supr = $(this).find("td:eq(0)").attr("data-val");
-            var stkGrp = $(this).find("td:eq(1)").attr("data-val");
-            var stkItm = $(this).find("td:eq(2)").attr("data-val");
-            var price = $(this).find("td:eq(3)").text();
-            var qnty = $(this).find("td:eq(4)").text();
-            var remk = $(this).find("td:eq(5)").text();
+            var supr = $(this).find("td:eq(1)").attr("data-val");
+            var stkGrp = $(this).find("td:eq(2)").attr("data-val");
+            var stkItm = $(this).find("td:eq(3)").attr("data-val");
+            var price = $(this).find("td:eq(4)").text();
+            var qnty = $(this).find("td:eq(5)").text();
+            var remk = $(this).find("td:eq(6)").text();
             var line = $(this).find("td:eq(7)").text();
 
             $("#supplierId").val(supr);
-            $("#stkgrpId").val(stkGrp);            
-            ItemPartialLoad(stkGrp,stkItm); //to assign item list & value            
+            $("#stkgrpId").val(stkGrp);
+            ItemPartialLoad(stkGrp,stkItm); //to assign item list & value
             $("#txtPrice").val(price);
             $("#txtQnty").val(qnty);
             $("#txtRemarks").val(remk);
@@ -170,19 +118,8 @@
     $("#btnCancel").click(function () {
         $("#DetailTable tr").removeClass("selected");
 
-        $("#txtLINE_ID").val("");
-        $("#stkgrpId").val("x");
-        ItemPartialLoad("x",""); //to assign item list        
-        $("#txtPrice").val("0");
-        $("#txtQnty").val("0");
-        $("#txtRemarks").val("");        
-
-        document.getElementById("btnAddItem").style.display = "inline-block";
-        document.getElementById("btnDelete").style.display = "inline-block";
-        $('a.btn-secondary').css('display', 'inline-block');
-
-        document.getElementById("btnUpdateItem").style.display = "none";
-        document.getElementById("btnCancel").style.display = "none";
+        resetScreenField();
+        ItemPartialLoad("x",""); //to assign item list
     });
 
     function chkFieldValue() {
@@ -242,7 +179,7 @@
                         }
                         else {
                             alert(response.message);
-                        }                        
+                        }
 
                         var selectedstkGrp = $("#stkgrpId").val();
                         ItemPartialLoad(selectedstkGrp,""); //to assign item list
@@ -313,15 +250,15 @@
                 const row = document.createElement("tr");
 
                 row.innerHTML = `
+                            <td>
+                                <button class="action-btn delete-btn" onclick="deleteRow(this)"><i class="fa fa-trash"></i></button>
+                            </td>
                             <td data-field="SUPPLIER_ID" data-val="${user.supplieR_ID}">${user.supplierInfo}</td>
                             <td data-field="STOCKGRP_ID" data-val="${user.stockgrP_ID}">${user.stkGrpInfo}</td>
                             <td data-field="STOCKITEM_ID" data-val="${user.stockiteM_ID}">${user.stkItemInfo}</td>
                             <td data-field="PRICE">${user.price}</td>
                             <td data-field="QUANTITY">${user.quantity}</td>
-                            <td data-field="Remarks">${user.remarks == null || user.remarks == '' ? '' : user.remarks}</td>                            
-                            <td>
-                                <button class="action-btn delete-btn" onclick="deleteRow(this)"><i class="fa fa-trash"></i></button>
-                            </td>
+                            <td data-field="Remarks">${user.remarks == null || user.remarks == '' ? '' : user.remarks}</td>
                             <td data-field="LINE_ID" style="display: none;">${user.linE_ID}</td>
                             `;
 
@@ -329,8 +266,13 @@
             });
         } else $("#btnDelete").attr('disabled', true);
 
+        resetScreenField();
+    };
+
+    function resetScreenField(){
         //clear screen fields
         $("#txtLINE_ID").val("");
+        $("#supplierId").val("x");
         $("#stkgrpId").val("x");
         $("#stkItemId").val("x");
         $("#txtPrice").val("0");
@@ -343,8 +285,6 @@
 
         document.getElementById("btnUpdateItem").style.display = "none";
         document.getElementById("btnCancel").style.display = "none";
-
-        document.getElementById("supplierId").disabled = true;
     };
 
     //to delete selected record from detail table
@@ -353,18 +293,18 @@
         if (confirmed) {
             var url = "/StockIncome/DeleteItem";
 
-            var curId = $("#txtId").val();            
+            var curId = $("#txtId").val();
 
             const row = $(btn).closest('tr');
-            // Find all <td> with data-id in the row            
-            // const dataCells = row.find('td[data-field]');            
+            // Find all <td> with data-id in the row
+            // const dataCells = row.find('td[data-field]');
             // const curline_id = $(dataCells[7]).data('field');
 
             var curline_id = row.find('td:eq(7)').text();
 
             var data = {
                 pCaller: "Entry",
-                id: curId,                
+                id: curId,
                 line_id: curline_id
             }
 
