--- a/POS/POS.Web/wwwroot/css/Common.css
+++ b/POS/POS.Web/wwwroot/css/Common.css
@@ -6,21 +6,21 @@
 }
 
 .add {
-    background-color: #0d6efd; /* Blueish */
+    background-color: #337ab7; /* Blueish */
     padding: 0px 5px 0px 5px;
 }
 
 .add:hover {
-    background-color: #0f4da9;
+    background-color: #015aa6;
 }
 
 .update {
-    background-color: #17a2b8; /* Blueish */
+    background-color: #2faf73; /* Blueish */
     padding: 0px 10px 0px 0px;
 }
 
 .update:hover {
-    background-color: #117a8b;    
+    background-color: #0a5f37;
 }
 
 .delete {
@@ -30,4 +30,74 @@
 
 .delete:hover {
     background-color: #bd2130;
+}
+
+.btn-add {
+    background-color: #337ab7; /* Blueish */
+}
+
+.btn-update {
+    background-color: #2faf73;
+    border-color: #2faf73;
+}
+
+table {
+    width: 100%;
+    margin: auto;
+    border-collapse: collapse;
+    background-color: #fff;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+}
+thead {
+    vertical-align: middle !important;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 10px;
+    text-align: left;
+}
+
+th {
+    background-color: #f0f0f0 !important;
+}
+
+.action-btn {
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.delete-btn {
+    background-color: #dc3545;
+    color: white;
+}
+
+td[contenteditable="true"] {
+    background-color: #fefae0;
+}
+
+.selected {
+    background-color: #cce5ff; /* Change this color to suit your design */
+}
+
+.form-label {
+    color: #0354cc;    
+}
+
+.row-side {
+    /*Places both divs side-by-side*/ 
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    margin-bottom: 10px;
+}
+
+.col-side {
+    /*Makes each div take equal width*/
+    flex: 1;
+}
+
+.row-bottom {    
+    margin-bottom: 10px;
 }
